fix contacts align

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ li { margin-bottom: .5em}
 .github2 a {background-image:  url("img/gh2.png")}
 .github2 li{}
 .contacts{background:#1B1B1D;}
-.contacts h3 {margin-top: 3.4em}
+.contacts h3 {margin-top: 2.4em}
 .contacts li a{text-decoration: none}
 .contacts li a:hover{text-decoration: underline;}
 .c4 .t1{background: #1D1D1F;}
